--- a/UnitTest/Win32/Debug/dunit.ini
+++ b/UnitTest/Win32/Debug/dunit.ini
@@ -29,3 +29,8 @@ TestConectado=0
 
 [Tests.OrmBasicoTests.exe.TestTDaoFireDac]
 
+[Tests.OrmBasicoTests.exe]
+TestTDaoFireDac=0
+
+[Tests.OrmBasicoTests.exe.TestTDaoIBX]
+
