Implementação des testes GerarClasse

--- a/UnitTest/Win32/Debug/dunit.ini
+++ b/UnitTest/Win32/Debug/dunit.ini
@@ -31,6 +31,9 @@ TestConectado=0
 
 [Tests.OrmBasicoTests.exe]
 TestTDaoFireDac=0
+TestTDaoIBX=0
 
 [Tests.OrmBasicoTests.exe.TestTDaoIBX]
+
+[Tests.OrmBasicoTests.exe.TestGerarClasseFireDac]
 
