--- a/Teste/TesteOrmBasico.dproj
+++ b/Teste/TesteOrmBasico.dproj
@@ -76,7 +76,6 @@
         <UWP_DelphiLogo150>$(BDS)\bin\Artwork\Windows\UWP\delphi_UwpDefault_150.png</UWP_DelphiLogo150>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1)'!=''">
-        <VerInfo_Locale>1046</VerInfo_Locale>
         <DCC_Define>DEBUG;$(DCC_Define)</DCC_Define>
         <DCC_DebugDCUs>true</DCC_DebugDCUs>
         <DCC_Optimize>false</DCC_Optimize>
@@ -85,9 +84,7 @@
         <DCC_RemoteDebug>true</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
-        <DCC_UnitSearchPath>..\FastMM;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
-        <DCC_Define>EnableMemoryLeakReporting;$(DCC_Define)</DCC_Define>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
@@ -104,6 +101,7 @@
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
+        <VerInfo_Keys>CompanyName=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductVersion=1.0.0.0;Comments=;ProgramID=com.embarcadero.$(MSBuildProjectName);FileDescription=$(MSBuildProjectName);ProductName=$(MSBuildProjectName)</VerInfo_Keys>
     </PropertyGroup>
     <ItemGroup>
         <DelphiCompile Include="$(MainSource)">
@@ -111,8 +109,8 @@
         </DelphiCompile>
         <DCCReference Include="Entity\Cidade.pas"/>
         <DCCReference Include="Entity\Cliente.pas"/>
-        <DCCReference Include="Views\ufrmTesteAtributos.pas">
-            <Form>frmTesteAtributos</Form>
+        <DCCReference Include="Views\ufrmTesteRelacionamento.pas">
+            <Form>frmTesteRelacionamento</Form>
         </DCCReference>
         <DCCReference Include="Views\ufrmTesteIbx.pas">
             <Form>frmTesteIbx</Form>
@@ -134,6 +132,12 @@
             <Form>frmCadFunc</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Views\ufrmTesteAtributos.pas">
+            <Form>frmTesteAtributos</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="Entity\Depto.pas"/>
+        <DCCReference Include="Entity\Funcionario.pas"/>
         <None Include="ModelSupport_TesteOrmBasico\default.txaPackage"/>
         <None Include="ModelSupport_TesteOrmBasico\default.txvpck"/>
         <None Include="ModelSupport_TesteOrmBasico\PrsAtributos\default.txvpck"/>
@@ -191,7 +195,7 @@
                 </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="3">
-                <DeployFile LocalName="ModelSupport_TesteOrmBasico\Lca\default.txvpck" Configuration="Debug" Class="ProjectFile">
+                <DeployFile LocalName="ModelSupport_TesteOrmBasico\PrsAtributos\default.txaPackage" Configuration="Debug" Class="ProjectFile">
                     <Platform Name="Win32">
                         <RemoteDir>.\</RemoteDir>
                         <Overwrite>true</Overwrite>
@@ -203,7 +207,7 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployFile LocalName="ModelSupport_TesteOrmBasico\PrsAtributos\default.txaPackage" Configuration="Debug" Class="ProjectFile">
+                <DeployFile LocalName="ModelSupport_TesteOrmBasico\Lca\default.txvpck" Configuration="Debug" Class="ProjectFile">
                     <Platform Name="Win32">
                         <RemoteDir>.\</RemoteDir>
                         <Overwrite>true</Overwrite>
